--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </header>
     <main>
         <section class="BoasVindas">
-            <h1> Seja bem vindo(a) ao Front-End Quiz</h1>
+            <h1> Seja bem vindo(a) ao  <br> 
+                <strong>Front-End Quiz</strong></h1>
             <p>Escolha um assunto para começar.</p>
         </section>
 
