primeira parte da estilização dos botões de assunto

--- a/index.html
+++ b/index.html
@@ -28,28 +28,30 @@
         </section>
 
         <section class="assuntos">
-            <button>
+            <button class="buttonHtml">
                 <div>
                     <img src="assets/images/icon-html.svg" alt="Icone do Html">
                 </div>
                 HTML
             </button>
-            <button>
+            <button class="buttonCss">
                 <div>
                     <img src="assets/images/icon-css.svg" alt="Icone do Css">
                 </div>
                 CSS
             </button>
-            <button>
+            <button class="buttonJs">
                 <div>
                     <img src="assets/images/icon-js.svg" alt="Icone do Javascript">
                 </div>
                 Javascript
             </button>
             <button>
-                <div>
-                    <img src="assets/images/icon-accessibility.svg">
-                </div>
+            <button>
+                <button class="buttonAcessibilidade">
+                    <div>
+                        <img src="assets/images/icon-accessibility.svg">
+                    </div>
                 Acessibilidade
             </button>
         </section>
