adaptação das cores pro tema dark

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="style.css">
     <title>Quiz App</title>
 </head>
-<body>
+<body class="dark">
     <header>
         <div class="tema">
             <img src="assets/images/icon-sun-dark.svg">
