html do header finalizado

--- a/pages/Quiz/Quiz.html
+++ b/pages/Quiz/Quiz.html
@@ -7,5 +7,31 @@
 </head>
 <body>
 
+    <header>
+        <div class="assunto">
+            <div class="assuntoIcone">
+                <img src="../../assets/images/icon-accessibility.svg" alt="Incone de Acessibilidade">
+            </div>
+
+            <h1>Acessibilidade</h1>
+        </div>
+
+        <div class="tema">
+            <img src="../../assets/images/icon-sun-dark.svg">
+            <button>
+                <div>
+                </div>
+            </button>
+            <img src="../../assets/images/icon-moon-dark.svg">
+        </div>
+    </header>
+    <main>
+        <section class="pergunta">
+            <p>Questão 6 de 10</p>
+
+
+        </section>
+    </main>
+
 </body>
 </html>
