--- a/pages/Quiz/Quiz.html
+++ b/pages/Quiz/Quiz.html
@@ -28,7 +28,33 @@
     <main>
         <section class="pergunta">
             <p>Questão 6 de 10</p>
+            <h2>Qual o significado de HTML?</h2>
 
+            <div class="barraProgresso">
+
+            </div>
+        </section>
+
+        <section class="alternativas">
+            <form action="">
+                <label for="alternativa_a">
+                    <input type="radio" id="alternativa_a">
+
+                    <div>
+                        <span>A</span>
+                        Hyper Trainer Marking Language
+                    </div>
+                </label>
+                <label for="alternativa_b">
+                    <input type="radio" id="alternativa_b">
+
+                    <div>
+                        <span>B</span>
+                        Hyper Text Marketing Language
+                    </div>
+                </label>
+
+            </form>
 
         </section>
     </main>
