--- a/pages/Quiz/Quiz.html
+++ b/pages/Quiz/Quiz.html
@@ -54,8 +54,25 @@
                     </div>
                 </label>
 
-            </form>
+                <label for="alternativa_c">
+                    <input type="radio" id="alternativa_c">
 
+                    <div>
+                        <span>C</span>
+                        Hyper Text Markup Language
+                    </div>
+                </label>
+                <label for="alternativa_d">
+                    <input type="radio" id="alternativa_d">
+
+                    <div>
+                        <span>D</span>
+                        Hyper Text Markup Leveler
+                    </div>
+                </label>
+
+            </form>
+            <button>Enviargit </button>
         </section>
     </main>
 
