estilização da pagina do quiz em 50 %

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
         </section>
     </main>
 
-    <a href="./pages/Quiz/Quiz.html"></a>
+    <a href="./pages/Quiz/quiz.html"></a>
 </body>
 </html>
