--- a/pages/Quiz/quiz.html
+++ b/pages/Quiz/quiz.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="quiz.css">
     <title>QuizApp</title>
 </head>
 <body>
@@ -31,7 +35,7 @@
             <h2>Qual o significado de HTML?</h2>
 
             <div class="barraProgresso">
-
+              <div></div>
             </div>
         </section>
 
@@ -72,7 +76,7 @@
                 </label>
 
             </form>
-            <button>Enviargit </button>
+            <button>Enviar</button>
         </section>
     </main>
 
