--- a/pages/Quiz/quiz.html
+++ b/pages/Quiz/quiz.html
@@ -31,8 +31,10 @@
     </header>
     <main>
         <section class="pergunta">
-            <p>Questão 6 de 10</p>
-            <h2>Qual o significado de HTML?</h2>
+            <div>
+                <p>Questão 6 de 10</p>
+                <h2>Qual o significado de HTML?</h2>
+            </div>
 
             <div class="barraProgresso">
               <div></div>
