--- a/pages/Quiz/quiz.html
+++ b/pages/Quiz/quiz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="quiz.css">
     <title>QuizApp</title>
 </head>
-<body>
+<body class="dark">
 
     <header>
         <div class="assunto">
