ajuste do box shadow

--- a/Resultados/resultado.html
+++ b/Resultados/resultado.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quis App</title>
 </head>
-<body>
+<body class="dark">
     <header>
         <main>
             <h2>
