alteracao da dinamica

--- a/pages/Quiz/quiz.html
+++ b/pages/Quiz/quiz.html
@@ -15,10 +15,10 @@
     <header>
         <div class="assunto">
             <div class="assuntoIcone">
-                <img src="../../assets/images/icon-accessibility.svg" alt="Incone de Acessibilidade">
+                <img src="" alt="">
             </div>
 
-            <h1>Acessibilidade</h1>
+            <h1></h1>
         </div>
 
         <div class="tema">
