--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
             <button class="buttonJs">
                 <div>
-                    <img src="assets/images/icon-js.svg" alt="Icone do Javascript">
+                    <img src="assets/images/icon-javascript.svg" alt="Icone do Javascript">
                 </div>
                 Javascript
             </button>
 
                 <button class="buttonAcessibilidade">
                     <div>
-                        <img src="assets/images/icon-accessibility.svg">
+                        <img src="assets/images/icon-acessibilidade.svg">
                     </div>
                 Acessibilidade
             </button>
