--- a/Resultados/resultado.html
+++ b/Resultados/resultado.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="resultado.css">]
     <script src="./resultado.js" type="module" defer></script>
 </head>
-<body class="dark">
+<body >
     <header>
         <main>
             <h2>
