--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
                 <div>
                     <img src="assets/images/icon-html.svg" alt="Icone do Html">
                 </div>
-                HTML
+                <span>HTML</span>
             </button>
             
             <button class="buttonCss">
                 <div>
                     <img src="assets/images/icon-css.svg" alt="Icone do Css">
                 </div>
-                CSS
+                <span>CSS</span>
             </button>
 
             <button class="buttonJs">
                 <div>
                     <img src="assets/images/icon-javascript.svg" alt="Icone do Javascript">
                 </div>
-                Javascript
+                <span>Javascript</span>
             </button>
 
                 <button class="buttonAcessibilidade">
                     <div>
                         <img src="assets/images/icon-acessibilidade.svg">
                     </div>
-                Acessibilidade
+                    <span>Acessibilidade</span>
             </button>
         </section>
     </main>
